--- a/css/alem.css
+++ b/css/alem.css
@@ -1,6 +1,7 @@
 <style type="text/css">
+        table { border-collapse:collapse }
 	.table {border: 1px solid black}
-	.td, .tr {border: 0}
+	.td, .tr {border: none}
 	.tr1 {outline: thin solid black;}
 	.td1 { vertical-align: middle; }
 	thead th {
@@ -10,9 +11,14 @@
 	hr { border: 0; color: #fff; width: 100%;}
 	div.ui-datepicker{ font-size:10px;}
 	
-	li{
-	display:inline;
-	padding:0 30%;
-	}
 	
+p.one 
+{
+border-style:solid;
+border-width:2px;
+border-color:#000000;
+color:red;
+text-align:center;
+
+}
 	</style>
